# anki-restart

./: .gitignore  README.md  Taskfile.yaml  __init__.py  addon.json  bb.edn  config.json  config.md  main.py  meta.json  pyproject.toml
bb/: tasks.clj
