[project]
name = "anki-restart"
version = "0.1.0"
description = "Anki add-on to restart Anki"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # No production dependencies - all provided by Anki
    # Put here just for local dev convinience.
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "aqt[qt6]>=25.9.2"
]

[project.optional-dependencies]
dev = []