[project]
name = "anki-restart"
version = "0.1.0"
description = "Anki add-on to restart Anki"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aqt>=25.9.2",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.uv]
default-groups = "all"